--- a/index_es_AR.html
+++ b/index_es_AR.html
@@ -4,54 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>HTML practica</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     
     <section class="container">
         <div class="content">
-            <h1>Scroll to Begin</h1>
-            <p>Start it like this..</p>
+            <h1>desplazar para empezar</h1>
+            <p>empieza asi..</p>
         </div>
     </section>
 
     <section class="container">
         <div class="content">
-            <h1>Step 1</h1>
-            <p>Start it like this..</p>
+            <h1>paso 1</h1>
+            <p>empieza asi..</p>
         </div>
     </section>
 
     <section class="container">
         <div class="content">
-            <h1>Step 2</h1>
-            <p>Start it like this..</p>
+            <h1>paso 2</h1>
+            <p>empieza asi..</p>
         </div>
     </section>
 
     <section class="container">
         <div class="content">
-            <h1>Step 3</h1>
-            <p>Start it like this..</p>
+            <h1>paso 3</h1>
+            <p>empieza asi..</p>
         </div>
     </section>
 
     <section class="container">
         <div class="content">
-            <h1>Step 4</h1>
-            <p>Start it like this..</p>
+            <h1>paso 4</h1>
+            <p>empieza asi..</p>
         </div>
     </section>
 
     <div id="set-height"></div>
 
-     <video id="v0" tabindex="0" preload>
-        <source type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"' src="fingers.mp4"/>
+    <video id="v0" tabindex="0", autobuffer preload>
+        <source type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"' src="fingers.mp4"></source>
     </video>
     <script src="sticky.js"></script>
     <script src="player.js"></script>
-    <!-- <script>
+  <!--   <script>
  
         enterView({
             selector: 'section',
@@ -84,6 +84,6 @@
 
     window.requestAnimationFrame(scrollPlay);
     
-    </script> -->
+    </script> --> 
 </body>
 </html>
